System-wide asdf & ohmyzsh installs

--- a/ansible/roles/git/templates/gitconfig.j2
+++ b/ansible/roles/git/templates/gitconfig.j2
@@ -1,8 +1,8 @@
 [user]
-	email = {{ git_email }}
-	name = {{ git_name }}
+  email = {{ git_email }}
+  name = {{ git_name }}
 [core]
-	editor = vim
-	excludesfile = {{ dotfiles_user_home }}/.gitignore_global
+  editor = vim
+  excludesfile = {{ dotfiles_config_root }}/.gitignore_global
 [init]
-    defaultBranch = main
+  defaultBranch = main
