--- a/ansible/roles/zsh/templates/zshrc.j2
+++ b/ansible/roles/zsh/templates/zshrc.j2
@@ -1,9 +1,10 @@
 ###############################################################################
 # BEGIN: Base
 
-export ZSH=/home/{{dotfiles_user}}/.oh-my-zsh
+export ZSH="/opt/oh-my-zsh"
+export ZSH_CACHE_DIR="$HOME/.cache/oh-my-zsh"
 
-ZSH_THEME="candy"
+ZSH_THEME="agnoster"
 
 autoload -U +X compinit && compinit
 autoload -U +X bashcompinit && bashcompinit
@@ -22,7 +23,7 @@ source $ZSH/oh-my-zsh.sh
 ###############################################################################
 # BEGIN: Others
 
-source {{ dotfiles_home }}/**/*.zsh
+source {{ dotfiles_config_root }}/**/*.zsh
 
 
 # END: Others
