Create git config directory

--- a/ansible/roles/git/templates/gitconfig.j2
+++ b/ansible/roles/git/templates/gitconfig.j2
@@ -3,6 +3,6 @@
   name = {{ git_name }}
 [core]
   editor = vim
-  excludesfile = {{ dotfiles_config_root }}/.gitignore_global
+  excludesfile = {{ dotfiles_config_root }}/git/.gitignore_global
 [init]
   defaultBranch = main
