Link asdf zsh file to zsh config

--- a/ansible/roles/zsh/templates/zshrc.j2
+++ b/ansible/roles/zsh/templates/zshrc.j2
@@ -23,7 +23,7 @@ source $ZSH/oh-my-zsh.sh
 ###############################################################################
 # BEGIN: Others
 
-source {{ dotfiles_config_root }}/**/*.zsh
+source {{ dotfiles_config_root }}/zsh/.zsh/*.zsh
 
 
 # END: Others
