Make docker install default

--- a/ansible/roles/mail/templates/main.cf.j2
+++ b/ansible/roles/mail/templates/main.cf.j2
@@ -5,7 +5,7 @@ smtp_sasl_security_options=noanonymous
 smtp_tls_CAfile=/etc/ssl/certs/ca-certificates.crt
 smtp_use_tls=yes
 myorigin = /etc/mailname
-mydestination = {{ hostname }}.localdomain, {{ hostname }}, localhost.localdomain, localhost
+mydestination = {{ mail_hostname }}.localdomain, {{ mail_hostname }}, localhost.localdomain, localhost
 mailbox_size_limit = 0
 recipient_delimiter = +
 inet_interfaces = all
